<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="393dp"
        android:layout_height="605dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/lblNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lblNombre" />

                    <EditText
                        android:id="@+id/txtNombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/lblSexo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lblSexo" />

                    <EditText
                        android:id="@+id/txtSexo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/lblEspecie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lblEspecie" />

                    <EditText
                        android:id="@+id/txtEspecie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/lblProfesion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lblProfesion" />

                    <EditText
                        android:id="@+id/txtProfesion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:inputType="textPersonName" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="157dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgProfesion"
                        android:layout_width="match_parent"
                        android:layout_height="251dp"
                        tools:srcCompat="@drawable/ic_profesion" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="284dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="113dp"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView17"
                            android:layout_width="match_parent"
                            android:layout_height="36dp" />

                        <TextView
                            android:id="@+id/lblVida"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txtVida" />

                        <EditText
                            android:id="@+id/txtVida"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:ems="10"
                            android:inputType="textPersonName" />

                        <TextView
                            android:id="@+id/lblFuerza"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txtFuerza" />

                        <EditText
                            android:id="@+id/txtFuerza"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:ems="10"
                            android:inputType="textPersonName" />

                        <TextView
                            android:id="@+id/lblMagia"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txtMagia" />

                        <EditText
                            android:id="@+id/txtMagia"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:ems="10"
                            android:inputType="textPersonName" />

                        <TextView
                            android:id="@+id/lblVelocidad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/txtVelocidad" />

                        <EditText
                            android:id="@+id/txtVelocidad"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:ems="10"
                            android:inputType="textPersonName" />
                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imgAvatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        tools:srcCompat="@drawable/avatar" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCrear"
                    android:layout_width="367dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/btn_crear" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="-9dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="-15dp" />
</androidx.constraintlayout.widget.ConstraintLayout>